[book-01] Add post new book
