# cmd/internal/controller.go
@@ -5,10 +5,12 @@ import (
 	"book-store/pkg/repository"
 	"context"
 	"fmt"
+	"time"
 )
 
 type BookRepository interface {
 	FindById(id int) (repository.BookDB, error)
+	InsertBook(repository.BookDB) (int, error)
 }
 
 type Controller struct {
@@ -30,7 +32,7 @@ func (c *Controller) GetBook(context context.Context, payload *book.GetBookPaylo
 	if err != nil {
 		return nil, book.MakeNotFound(fmt.Errorf("error while fetching book: %w", err))
 	}
-	timeString := bookResult.PublishedAt.Format("2006-01-02 15:04:05")
+	timeString := bookResult.PublishedAt.Format("2006-01-02")
 	res := book.BookResult{
 		ID:          &bookResult.ID,
 		Title:       &bookResult.Title,
@@ -41,6 +43,31 @@ func (c *Controller) GetBook(context context.Context, payload *book.GetBookPaylo
 	return &res, nil
 }
 
-func (c *Controller) PostBook(context.Context, *book.BookResult) (res *book.BookResult, err error) {
-	return nil, nil
+func (c *Controller) PostBook(context context.Context, request *book.BookReq) (*book.BookResult, error) {
+	if request.Title == "" || request.Author == "" {
+		return nil, book.MakeBadRequest(fmt.Errorf("requeired property not provided"))
+	}
+
+	bookDB := repository.BookDB{
+		Title:     request.Title,
+		Author:    request.Author,
+		BookCover: request.BookCover,
+	}
+
+	if request.PublishedAt != nil {
+		publishedAt, err := time.Parse("2006-01-02", *request.PublishedAt)
+		if err != nil {
+			return nil, book.MakeBadRequest(fmt.Errorf("wrong time provided"))
+		}
+		bookDB.PublishedAt = publishedAt
+	}
+	id, err := c.repo.InsertBook(bookDB)
+
+	if err != nil {
+		return nil, fmt.Errorf("error while inserting in db: %w", err)
+	}
+	res := book.BookResult{
+		ID: &id,
+	}
+	return &res, nil
 }
