# design/gen/book/views/view.go
@@ -44,12 +44,6 @@ var (
 			"bookCover",
 			"publishedAt",
 		},
-		"inserting": {
-			"title",
-			"author",
-			"bookCover",
-			"publishedAt",
-		},
 		"resultOperation": {
 			"id",
 		},
@@ -62,12 +56,10 @@ func ValidateBookResult(result *BookResult) (err error) {
 	switch result.View {
 	case "default", "":
 		err = ValidateBookResultView(result.Projected)
-	case "inserting":
-		err = ValidateBookResultViewInserting(result.Projected)
 	case "resultOperation":
 		err = ValidateBookResultViewResultOperation(result.Projected)
 	default:
-		err = goa.InvalidEnumValueError("view", result.View, []any{"default", "inserting", "resultOperation"})
+		err = goa.InvalidEnumValueError("view", result.View, []any{"default", "resultOperation"})
 	}
 	return
 }
@@ -75,13 +67,6 @@ func ValidateBookResult(result *BookResult) (err error) {
 // ValidateBookResultView runs the validations defined on BookResultView using
 // the "default" view.
 func ValidateBookResultView(result *BookResultView) (err error) {
-
-	return
-}
-
-// ValidateBookResultViewInserting runs the validations defined on
-// BookResultView using the "inserting" view.
-func ValidateBookResultViewInserting(result *BookResultView) (err error) {
 
 	return
 }
