# pkg/repository/model.go
@@ -7,5 +7,9 @@ type BookDB struct {
 	Title       string    `gorm:"column:title"`
 	Author      string    `gorm:"column:author"`
 	BookCover   []byte    `gorm:"colums:book_cover"`
-	PublishedAt time.Time `gorm:"colums:published_at"`
+	PublishedAt time.Time `gorm:"colums:published_at,omitempty"`
+}
+
+func (bdb BookDB) TableName() string {
+	return "books"
 }
